--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/auth": "^22.2.0",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.21",
+    "@types/uuid": "^10.0.0",
     "react": "18.2.0",
     "react-native": "0.73.11",
+    "react-native-bcrypt": "^2.4.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.28.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
