--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.21",
     "react": "18.2.0",
     "react-native": "0.73.11",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.28.0",
