--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/stack": "^6.3.21",
     "react": "18.2.0",
     "react-native": "0.73.11",
+    "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.28.0",
