--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/auth": "^22.2.0",
     "@react-native-google-signin/google-signin": "^14.0.1",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.21",
     "@types/uuid": "^10.0.0",
@@ -27,6 +28,7 @@
     "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.28.0",
+    "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^9.2.0",
     "uuid": "^11.1.0"
   },
