--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/auth": "^22.2.0",
     "@react-native-google-signin/google-signin": "^14.0.1",
@@ -18,14 +19,17 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@types/geolib": "^2.0.3",
     "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
+    "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-native": "0.73.11",
     "react-native-async-storage": "^0.0.1",
     "react-native-bcrypt": "^2.4.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-maps": "^1.13.2",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.8.0",
