--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.28.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^9.2.0",
     "uuid": "^11.1.0"
