--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-native-bcrypt": "^2.4.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-image-picker": "^8.2.1",
-    "react-native-maps": "^1.13.2",
+    "react-native-maps": "1.13.2",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.8.0",
