--- a/ios/s7mstore/Info.plist
+++ b/ios/s7mstore/Info.plist
@@ -48,5 +48,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>s7mstore</string>
+      </array>
+    </dict>
+  </array>
 </dict>
+
 </plist>
