--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
     "geolib": "^3.3.4",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.11",
