hoàn thiện chức năng gửi ảnh, xác thực với 2 phương thức ĐN

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@types/geolib": "^2.0.3",
     "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
-    "moment": "^2.30.1",
     "geolib": "^3.3.4",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.11",
     "react-native-async-storage": "^0.0.1",
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-image-picker": "^8.2.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.13.2",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^3.7.0",
