--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.13.2",
     "react-native-paper": "^5.14.5",
+    "react-native-permissions": "^5.4.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.28.0",
