--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/auth": "^22.3.0",
     "@react-native-google-signin/google-signin": "^14.0.2",
     "@react-native-picker/picker": "^2.11.0",
+    "@react-native/gradle-plugin": "^0.73.4",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -28,7 +29,6 @@
     "react-native": "0.73.11",
     "react-native-async-storage": "^0.0.1",
     "react-native-bcrypt": "^2.4.0",
-    "react-native-gesture-handler": "^2.14.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
@@ -38,6 +38,7 @@
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.28.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-swipe-button": "^0.0.4",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^9.2.0",
     "socket.io-client": "^4.8.1",
