--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-maps": "1.13.2",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^3.7.0",
+    "react-native-reanimated": "3.7.0",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.28.0",
     "react-native-sqlite-storage": "^6.0.1",
