--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/geolocation": "^3.4.0",
-    "@react-native-firebase/app": "^22.3.0",
+    "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/auth": "^22.3.0",
     "@react-native-google-signin/google-signin": "^14.0.2",
     "@react-native-picker/picker": "^2.11.0",
@@ -35,10 +35,9 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.13.2",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "3.7.0",
     "react-native-permissions": "^5.4.2",
     "react-native-push-notification": "^8.1.1",
-  
+    "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.28.0",
     "react-native-sqlite-storage": "^6.0.1",
